--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <body>
       <form style="">
          <h1>Check # of connections in use</h1>
-         <input type="text" name="server" id="server" placeholder="Server" value="http://go.sr71.uk:80">
+         <input type="text" name="server" id="server" placeholder="Server" value="https://go.sr71.uk">
          <input type="text" name="user" id="user" placeholder="User Name">
          <input type="password" name="pw" id="pw" placeholder="Password">
          <p id="answer"></p>
