--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Check # of connections in use</title>
       <link rel="stylesheet" href="https://unpkg.com/mvp.css">
       <style>
