--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <title>Check # of connections in use</title>
       <link rel="stylesheet" href="https://unpkg.com/mvp.css">
       <style>
-         form{width:500px;margin:auto}
-         input{width:300px;margin-left:auto;margin-right:auto}
+         form{max-width:500px;margin:auto}
+         input{max-width:300px;margin-left:auto;margin-right:auto}
          #answer {text-align:center}
          #buttonContainer{text-align:center}
       </style>
